# reminisce

./: .env.example  .env.test.local  .gitignore  README.md  docling_output.json  docling_output.raw.txt  liteparse_output.json  llama_cloud_output.json  llama_cloud_output.raw.txt  pyproject.toml  test.py
backend/app/: config.py  llm_adapter.py  main.py
backend/app/routers/: chat.py  graph.py  quiz.py  sources.py
backend/app/services/: graph_builder.py  parser.py  quiz.py  rag.py
playground/: README.md  docling_llamaindex.py  docling_output.raw.txt  pymupdf4llm_output.json  test.py
playground/llamaindex/: community_manager.py  config.py  docling_reader.py  embeddings.py  graphrag_extractor.py  graphrag_store.py  llm_registry.py  main.py  node_enrichment.py  pipeline.py  retrieval.py
playground/parsing/: docling.py  docling_output.json  liteparse_output.raw.txt  pymupdf4llm_output.raw.txt  test.py
