[project]
name = "reminisce-backend"
version = "0.1.0"
description = "Reminisce AI Study App - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "python-dotenv",
    "llama-index-core",
    "llama-index-llms-gemini",
    "llama-index-embeddings-gemini",
    "llama-cloud",
    "liteparse>=1.2.1",
    "docling>=2.86.0",
    "pymupdf4llm>=1.27.2.2",
]
